# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Added methods for modifying DependSpec externally.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Added intersects() and encapsulates() functions to the Atom class for
  comparing relationships between similar atoms.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> man/portage.5:
  Removed invalid example from package.keywords section.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_dep.py
  pym/portage_syntax.py: Mostly completed DependSpec and started on
  TargetGraph.

  29 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/doman:
  Recognize more subchapters than just [1-8n] #32584.

  29 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/env-update.sh 
  pym/portage.py pym/portage_const.py:
  Remove execution of depscan.sh #86523.

  26 Apr 2005; Marius Mauch <genone@gentoo.org> cnf/make.globals*:
  Add FEATURES=strict.

  25 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild-functions.sh:
  Remove autoconfig FEATURE and make it always run Bug #81822.

  25 Apr 2005; Marius Mauch <genone@gentoo.org> pym/portage.py:
  remove the stupid "masked by -* keyword" message.

  24 Apr 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Added a class called DependSpec which handles parsing *DEPEND and SRC_URI
  strings. Read-only at the moment, but will probably change later.

  24 Apr 2005; Jason Stubbs <jstubbs@gentoo.org> bin/emerge pym/portage.py:
  Removed support for --inject and --upgradeonly as well as the now unused
  digraph class.
